# Firelands-Core

./: .editorconfig  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  PreLoad.cmake  README.md  THANKS  appveyor.yml  issue_template.md  pull_request_template.md  revision.h.in.cmake  revision_data.h.in.cmake
dep/: CMakeLists.txt  PackageList.txt  README.md
dep/SFMT/: CMakeLists.txt
dep/StormLib/: CMakeLists.txt
dep/acelite/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt
dep/argon2/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/bzip2/: CMakeLists.txt
dep/cotire/CMake/: cotire.cmake
dep/efsw/: CMakeLists.txt
dep/fmt/: CMakeLists.txt  README.rst
dep/g3dlite/: CMakeLists.txt
dep/g3dlite/G3D/: prompt.cpp
dep/gsoap/: CMakeLists.txt  tc_upgrades.txt
dep/jemalloc/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/libzmq/: CMakeLists.txt
dep/loadlib/: CMakeLists.txt
dep/loadlib/ml/: CMakeLists.txt  adt.cpp  adt.h  loadlib.h  wdt.h
dep/loadlib/sl/: adt.h  loadlib.h
dep/mysql/: CMakeLists.txt
dep/openssl/: CMakeLists.txt
dep/rapidjson/: CMakeLists.txt
dep/readline/: CMakeLists.txt
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/threads/: CMakeLists.txt
dep/utf8cpp/: CMakeLists.txt
dep/valgrind/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
dep/zmqpp/: CMakeLists.txt
src/: CMakeLists.txt
src/authserver/: CMakeLists.txt  Main.cpp  README.md  authserver.conf.dist.in
src/authserver/Auth/: AuthCodes.h  AuthSocket.cpp  AuthSocket.h
src/authserver/Patch/: PatchHandler.cpp  PatchHandler.h
src/authserver/Realm/: RealmList.cpp  RealmList.h
src/authserver/SocketBuffer/: BufferedSocket.cpp  BufferedSocket.h
src/cmake/: fc_macros.cmake  options.cmake  showoptions.cmake
src/cmake/macros/: AutoCollect.cmake  CheckBuildDir.cmake  CheckPlatform.cmake  ConfigInstall.cmake  ConfigureApplications.cmake  ConfigureBaseTargets.cmake  ConfigureModules.cmake  ConfigureScripts.cmake  ConfigureTools.cmake  FindGit.cmake  FindOpenSSL.cmake  FindPCHSupport.cmake  GroupSources.cmake
src/common/: AutoPtr.h  Banner.cpp  Banner.h  CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  GitRevision.cpp  GitRevision.h  SystemConfig.h
src/common/Asio/: AsioHacksFwd.h  DeadlineTimer.h  IoContext.h  IpAddress.h  IpNetwork.h  Resolver.h  Strand.h
src/common/Collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  DynamicTree.cpp  DynamicTree.h  RegularGrid.h  VMapDefinitions.h  VMapTools.h
src/common/Configuration/: BuiltInConfig.cpp  BuiltInConfig.h  Config.cpp  Config.h
src/common/Cryptography/: AES.cpp  AES.h  ARC4.cpp  ARC4.h  Argon2.cpp  Argon2.h  BigNumber.cpp  BigNumber.h  CryptoConstants.h  CryptoGenerics.h  CryptoHash.h  CryptoRandom.cpp  CryptoRandom.h  HMAC.h  HmacHash.cpp  HmacHash.h  OpenSSLCrypto.cpp  OpenSSLCrypto.h  SHA1.cpp  SHA1.h  SHA256.h  SecretMgr.cpp  TOTP.cpp  TOTP.h  WardenKeyGeneration.h
src/common/DataStores/: DBCFileLoader.cpp  DBCFileLoader.h
src/common/Debugging/: Errors.cpp  Errors.h  WheatyExceptionReport.cpp  WheatyExceptionReport.h
src/common/Dynamic/: FactoryHolder.h  LinkedList.h  ObjectRegistry.h  TypeContainerFunctions.h  UnorderedMap.h
src/common/Encoding/: Base32.cpp  Base32.h  Base64.cpp  Base64.h  BaseEncoding.h
src/common/Hacks/: boost_1_73_process_windows_nopch.h  boost_1_74_fibonacci_heap.h
src/common/IPLocation/: IPLocation.cpp  IPLocation.h
src/common/Logging/: Appender.cpp  Appender.h  AppenderConsole.cpp  AppenderConsole.h  AppenderFile.cpp  AppenderFile.h  Log.cpp  Log.h  LogCommon.h  LogMessage.cpp  LogMessage.h  LogOperation.cpp  LogOperation.h  Logger.cpp  Logger.h  enuminfo_AppenderConsole.cpp  enuminfo_LogCommon.cpp
src/common/Metric/: Metric.cpp  Metric.h
src/common/Navigation/: DetourExtended.cpp  DetourExtended.h
src/common/Platform/: ServiceWin32.cpp  ServiceWin32.h
src/common/PrecompiledHeaders/: commonPCH.h
src/common/Threading/: LockedQueue.h  MPSCQueue.h  PCQueue.h  PolicyLock.h  ProcessPriority.cpp  ProcessPriority.h  ProducerConsumerQueue.h  Threading.cpp  Threading.h  ThreadingModel.h
src/common/Utilities/: AsyncCallbackProcessor.h  ByteConverter.h  Containers.h  Duration.h  EnumFlag.h  EventMap.cpp  EventMap.h  EventProcessor.cpp  EventProcessor.h  Hash.h  IteratorPair.h  Memory.h  MessageBuffer.h  Optional.h  Random.cpp  Random.h  Regex.h  SFMTRand.cpp  SFMTRand.h  SignalHandler.h  SmartEnum.h  StartProcess.cpp  StartProcess.h  StringConvert.h  StringFormat.cpp  StringFormat.h  TaskScheduler.cpp  TaskScheduler.h  Timer.cpp  Timer.h  Tokenize.cpp  Tokenize.h  Tuples.h  Types.h  Util.cpp  Util.h  advstd.h
src/game/: CMakeLists.txt  pchdef.h
src/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h
src/game/BattleGround/: BattleGround.cpp  BattleGround.h  BattleGroundAA.cpp  BattleGroundAA.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundDS.cpp  BattleGroundDS.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundIC.cpp  BattleGroundIC.h  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundRB.cpp  BattleGroundRB.h  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundRV.cpp  BattleGroundRV.h  BattleGroundSA.cpp  BattleGroundSA.h  BattleGroundWS.cpp  BattleGroundWS.h  CMakeLists.txt
src/game/ChatCommands/: AHBotCommands.cpp  AccountCommands.cpp  AchievementCommands.cpp  AuctionHouseCommands.cpp  BanAndKickCommands.cpp  CreatureCommands.cpp  (+29 more)
src/genrev/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/server/: CMakeLists.txt
src/shared/: .gitignore  CMakeLists.txt  SystemConfig.h.in  revision_data.h.in
src/tools/: .gitignore  CMakeLists.txt
src/worldserver/: AFThread.cpp  AFThread.h  CMakeLists.txt  CliThread.cpp  CliThread.h  RAThread.cpp  RAThread.h  WorldThread.cpp  WorldThread.h  worldserver.conf.dist.in  worldserver.cpp
(+3545 files in other folders)
